@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-05-23T08:17:13Z",
-  "count_outdated" : 82,
-  "uniques_outdated" : 64,
+  "timestamp" : "2024-05-28T00:59:23Z",
+  "count_outdated" : 83,
+  "uniques_outdated" : 65,
   "count" : 84,
   "uniques" : 66,
   "clones" : [
-    {
-      "timestamp": "2024-05-14T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-05-23T00:00:00Z",
       "count": 1,
